# queuify

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  docker_entrypoint.sh  manage.py  pyproject.toml
core/: testdb.py  utils.py
core/management/commands/: resetdb.py
queues/: admin.py  forms.py  models.py  stats_views.py  testdb.py  tests.py  urls.py  views.py
queues/migrations/: 0001_initial.py  0002_alter_ticket_closure_time_alter_ticket_queue_and_more.py  0003_alter_qqueue_fixed_ticket_time_seconds.py  0004_remove_qqueue_fixed_ticket_time_seconds_and_more.py  0005_alter_ticket_requested_time_queueopenexception.py  0006_qqueue_tz.py  0007_alter_qqueue_join_mode.py  0008_userqueuereport_qqueue_reports_userqueuereport_queue_and_more.py  0009_alter_userqueuereport_options.py
queues/templates/queues/: admin_add.html  admin_remove.html  admins.html  book.html  create.html  detail.html  edit.html  edit_schedule.html  invite.html  leave.html  list.html  manage.html  manage_cancel.html  manage_exception.html  manage_serve.html  report.html  report_details.html  (+3 more)
queuify/: asgi.py  settings.py  urls.py  wsgi.py
templates/: basebs.html  home.html
templates/registration/: logged_out.html  login.html
test_media/: copyright.txt
users/: admin.py  forms.py  middleware.py  models.py  testdb.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_tz.py  0003_alter_user_image.py  0004_user_pronouns_alter_user_description_and_more.py  0005_user_notification_subscription.py  0006_remove_user_notification_subscription.py
(+11 files in other folders)
